[package]
name = "luxutil"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Utilities for LUKS encrypted drives/DM-Crypt"
readme = "README.md"
repository = "https://github.com/ShayKStage/luxutil"
authors = [
    "Shay Eclipse Kirkegaard Stage <shaykstage.crates.d8azq@passmail.net>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
