[package]
name = "luksmount"
version = "1.0.5"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Utility to mount/unmount LUKS encrypted drives "
readme = "README.md"
repository = "https://github.com/ShayKStage/luksmount"
authors = [
    "Shay Eclipse Kirkegaard Stage <shaykstage.crates.d8azq@passmail.net>",
]
keywords = ["LUKS", "encryption", "encrypted", "filesystems"]
categories = ["command-line-utilities", "filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "luksmount_internal"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
inquire = "0.6.2"
